[package]
name = "state-space"
description = "A library providing searches on state space."
repository = "https://github.com/trayze/state-space"
version = "0.1.0"
authors = ["TrAyZeN"]
edition = "2018"
license = "MIT"
keywords = [
    "state-space",
    "state-space-search",
    "graph"
]
categories = [
    "algorithms",
    "game"
]

[dependencies]
rand = "0.8.3"
